開發Checkout頁面 ※目前優惠券欄位，篩選會員可用的券

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/appsettings.json
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/appsettings.json
@@ -1,4 +1,7 @@
 {
+  //第三方登入金鑰
+  "GoogleApiClientId": "572000494003-padpmen83rqinfo8tjq6d5tu653d69m2.apps.googleusercontent.com",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
