--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
@@ -28,10 +28,9 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Core" Version="1.34.0" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="CKSource.CKFinder" Version="3.5.2" />
-    <PackageReference Include="CKSource.CKFinder.Connector.Config" Version="3.5.2" />
-    <PackageReference Include="CKSource.CKFinder.Connector.Core" Version="3.5.2" />
     <PackageReference Include="DataTables.AspNet.AspNetCore" Version="2.0.2" />
     <PackageReference Include="DataTables.AspNet.Core" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
