--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="DataTables.AspNet.AspNetCore" Version="2.0.2" />
     <PackageReference Include="DataTables.AspNet.Core" Version="2.0.2" />
     <PackageReference Include="Google.Apis.Auth" Version="1.61.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
