--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\MemberLogin\ValidGoogleLogin.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Views\Shared\_Layout.cshtml.css" />
   </ItemGroup>
 
