--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
@@ -47,6 +47,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="OpenAI" Version="1.7.2" />
     <PackageReference Include="PagedList.Mvc" Version="4.5.0" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
