--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
@@ -40,6 +40,7 @@
     <PackageReference Include="DataTables.AspNet.Core" Version="2.0.2" />
     <PackageReference Include="EPPlus" Version="6.2.8" />
     <PackageReference Include="Google.Apis.Auth" Version="1.61.0" />
+    <PackageReference Include="Hangfire" Version="1.8.5" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
