--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 slnjCatChaOnlineShop7.zip
+/slnjCatChaOnlineShop/prjCatChaOnlineShop/appsettings.json
