--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,4 @@ FodyWeavers.xsd
 *.sln.iml
 slnjCatChaOnlineShop7.zip
 /slnjCatChaOnlineShop/prjCatChaOnlineShop/appsettings.json
+/slnjCatChaOnlineShop/prjCatChaOnlineShop/appsettings.json
