--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/prjCatChaOnlineShop.csproj
@@ -44,6 +44,7 @@
     <PackageReference Include="Hangfire" Version="1.8.5" />
     <PackageReference Include="Hangfire.Autofac" Version="2.4.1" />
     <PackageReference Include="Hangfire.MemoryStorage" Version="1.8.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
